--- a/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
+++ b/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 1/141 [00:00<00:17,  8.23it/s]"
+      "  1%|▏         | 2/141 [00:00<00:07, 17.71it/s]"
      ]
     },
     {
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 141/141 [00:33<00:00,  4.22it/s]\n"
+      "100%|██████████| 141/141 [00:31<00:00,  4.52it/s]\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,13 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aaea60163f3d405b9936e6d726608466",
+       "model_id": "a745e0fe06944e8d8514cc14d0f0a81b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,7 +179,6 @@
     "for key, file in tqdm(INFO_items):\n",
     "    save_path = file['directory']\n",
     "    bp = np.load(f\"{PROJECT_PATH}/{save_path}/rotated_bodypoints.npy\")\n",
-    "#     test.append(bp.tolist())\n",
     "    num_fr, _, _ = bp.shape\n",
     "    # locate the good frames\n",
     "    good_fr, bad_fr, disregard_fr = locate_bad_fr(config, bp)\n",
@@ -189,37 +188,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1872138, 30, 3)"
+       "563273"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_rot_bp = np.concatenate(test)\n",
-    "test_rot_bp.shape"
+    "start_fr-num_good_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tot_good_fr, tot_bad_fr, tot_disregard_fr = locate_bad_fr(config, rot_bp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -228,47 +217,55 @@
        "559988"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "tot_good_fr, tot_bad_fr, tot_disregard_fr = locate_bad_fr(config, rot_bp)\n",
     "len(tot_good_fr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_tot_good_fr, test_tot_bad_fr, test_tot_disregard_fr = locate_bad_fr(config, test_rot_bp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61b17a16374744e581f25402069c9cd3",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "559476"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=141.0), HTML(value='')))"
       ]
      },
-     "execution_count": 37,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "len(test_tot_good_fr)"
+    "good_fr_count = 0   \n",
+    "for key, file in tqdm(INFO_items):\n",
+    "    start_fr, stop_fr = file[\"global_start_fr\"], file[\"global_stop_fr\"]\n",
+    "    good_fr, bad_fr, disregard_fr = locate_bad_fr(config, rot_bp[start_fr:stop_fr])\n",
+    "    num_good_fr = len(good_fr)\n",
+    "    good_fr_count += num_good_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -277,28 +274,79 @@
        "563668"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start_fr"
+    "good_fr_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 36,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6730904ee1c4912b4795f600784f823",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=141.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tot_good_fr= np.concatenate(tot_good_fr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "563668\n",
+      "(563668,)\n",
+      "(563668,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(good_fr_count)\n",
+    "print(tot_good_fr.shape)\n",
+    "print(np.unique(tot_good_fr).shape)"
+   ]
   },
   {
    "cell_type": "code",
