--- a/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
+++ b/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
@@ -313,7 +313,15 @@
     }
    ],
    "source": [
-    "\n",
+    "good_fr_count = 0\n",
+    "tot_good_fr = []\n",
+    "for key, file in tqdm(INFO_items):\n",
+    "    start_fr, stop_fr = file[\"global_start_fr\"], file[\"global_stop_fr\"]\n",
+    "    good_fr, bad_fr, disregard_fr = locate_bad_fr(config, rot_bp[start_fr:stop_fr])\n",
+    "    good_fr_global_idx = good_fr+start_fr\n",
+    "    tot_good_fr.append(good_fr_global_idx)\n",
+    "    good_fr_count += len(good_fr)\n",
+    "tot_good_fr= np.concatenate(tot_good_fr)\n",
     "\n",
     "    \n"
    ]
@@ -350,10 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "563668"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tot_good_fr)"
+   ]
   },
   {
    "cell_type": "markdown",
