--- a/notebook/dong/4_all_features/Caste_Env_Embedding.ipynb
+++ b/notebook/dong/4_all_features/Caste_Env_Embedding.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "SMALL_SIZE, MEDIUM_SIZE = 9, 12\n",
-    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
+    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\"\n",
+    "PROJECT_PATH_BMGPU = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
    ]
   },
   {
@@ -17,6 +18,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import pickle\n",
     "import numpy as np\n",
     "from glob import glob\n",
     "import random, matplotlib\n",
@@ -77,7 +79,8 @@
     }
    ],
    "source": [
-    "Data = Dataset(PROJECT_PATH, 'final')\n",
+    "config_path = f\"{PROJECT_PATH_BMGPU}/config_ant.yaml\"\n",
+    "Data = Dataset(PROJECT_PATH, config_path)\n",
     "Data.load_data()"
    ]
   },
@@ -107,17 +110,10 @@
     "all_postural_embed = Data.data_obj['all_postural_embeddings']\n",
     "all_kinematic_embed = Data.data_obj['all_kinematic_embeddings']\n",
     "\n",
-    "# cluster\n",
-    "cluster = Data.data_obj['cluster']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt(\"all_feature_embedding.csv\", all_embed, delimiter=\",\")"
+    "cluster = Data.data_obj['cluster']\n",
+    "\n",
+    "with open (f\"{PROJECT_PATH_BMGPU}/{config['result_path']}/limb_scale_model.pickle\", 'rb') as file:\n",
+    "    limb_scaler = pickle.load(file)"
    ]
   },
   {
@@ -146,8 +142,8 @@
     }
    ],
    "source": [
-    "fig_all_embed, ax_base = plt.subplots(1,1,figsize=(5,5))\n",
-    "ax_base.scatter(all_embed[:,0], all_embed[:,1], s=1, alpha=0.005)\n",
+    "fig_all_embed, ax_all_embed = plt.subplots(1,1,figsize=(5,5))\n",
+    "ax_all_embed.scatter(all_embed[:,0], all_embed[:,1], s=1, alpha=0.005)\n",
     "plt.show()"
    ]
   },
